--- a/qea/pubspec.yaml
+++ b/qea/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_core:
+  cloud_firestore:
+  firebase_auth:
   flutter:
     sdk: flutter
 
